--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "express": "^4.16.4",
     "firebase-admin": "^6.3.0",
     "mariadb": "^2.0.1-beta"
   }
