database init again

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -2,4 +2,4 @@ FROM mariadb:10.4
 ENV MYSQL_ROOT_PASSWORD test
 EXPOSE 3306
 COPY ./init.sql /
-RUN mysql -u root -p MYSQL_ROOT_PASSWORD < init.sql
+RUN mysql -u root -p $MYSQL_ROOT_PASSWORD < init.sql
