--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-bearer-token": "^2.2.0",
     "firebase-admin": "^6.3.0",
     "mariadb": "^2.0.1-beta"
   }
