--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,5 +1,6 @@
-FROM mariadb:10.4
-ENV MYSQL_ROOT_PASSWORD test
+FROM mysql:latest
+ENV MYSQL_ROOT_PASSWORD=test
+ADD ./init/schema.sql /docker-entrypoint-initdb.d
+#RUN service mysql start
+#RUN mysql -u root -ptest -e "create database piastdb"
 EXPOSE 3306
-COPY ./init.sql /
-RUN mysql -u root -p $MYSQL_ROOT_PASSWORD < init.sql
