--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,4 @@ services:
       - 3306:3306
     volumes:
       - ./database/data:/var/lib/mysql
+      - ./database/init:/docker-entrypoint-initdb.d/
