--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,6 +1,6 @@
-FROM mysql:latest
+FROM mariadb:10.4
 ENV MYSQL_ROOT_PASSWORD=test
-ADD ./init/schema.sql /docker-entrypoint-initdb.d
+#ADD ./init/schema.sql /docker-entrypoint-initdb.d
 #RUN service mysql start
 #RUN mysql -u root -ptest -e "create database piastdb"
 EXPOSE 3306
