--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     build: ./backend
     ports:
       - 2137:2137
-    volumes:
-      - ./backend/:/usr/src/app
+        #volumes:
+        #- ./backend/:/usr/src/app
     depends_on:
       - piast-db
   piast-db:
