--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "express-bearer-token": "^2.2.0",
     "firebase-admin": "^6.3.0",
-    "mariadb": "^2.0.1-beta"
+    "mariadb": "^2.0.1-beta",
+    "mysql": "^2.16.0"
   }
 }
